@@ -1,13 +1,17 @@
 package com.unisphere.service;
 
 import com.unisphere.entity.User;
+import com.unisphere.entity.UserStatus;
 import com.unisphere.repository.UserRepository;
 import java.util.Collections;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.core.userdetails.UsernameNotFoundException;
+import org.springframework.security.authentication.DisabledException;
 import org.springframework.stereotype.Service;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
+import java.util.List;
 
 @Service
 public class CustomUserDetailsService implements UserDetailsService {
@@ -24,10 +28,14 @@ public class CustomUserDetailsService implements UserDetailsService {
             .findByEmail(username)
             .orElseThrow(() -> new UsernameNotFoundException("User not found"));
 
+        if (user.getStatus() != UserStatus.APPROVED) {
+            throw new DisabledException("Account is not approved");
+        }
+
         return new org.springframework.security.core.userdetails.User(
             user.getEmail(),
             user.getPassword(),
-            Collections.singletonList(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
+            List.of(new SimpleGrantedAuthority("ROLE_" + user.getRole().name()))
         );
     }
 }
